@@ -1,3 +1,14 @@
+2012-11-08  Timothy Hatcher  <timothy@apple.com>
+
+        Always use a textured window for the Web Inspector.
+
+        https://bugs.webkit.org/show_bug.cgi?id=101693
+
+        Reviewed by Joseph Pecoraro.
+
+        * UIProcess/mac/WebInspectorProxyMac.mm:
+        (WebKit::WebInspectorProxy::createInspectorWindow): Removed the conditional for a textured window.
+
 2012-11-08  Huang Dongsung  <luxtella@company100.net>
 
         Coordinated Graphics: Don't send the messages for releasing resources during purging.
