@@ -1,3 +1,14 @@
+2012-11-08  Timothy Hatcher  <timothy@apple.com>
+
+        Always use a textured window for the Web Inspector.
+
+        https://bugs.webkit.org/show_bug.cgi?id=101693
+
+        Reviewed by Joseph Pecoraro.
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (-[WebInspectorWindowController window]): Removed the conditional for a textured window.
+
 2012-11-08  Roger Fong  <roger_fong@apple.com>
 
         Null check URL key entries into WebHistory hash table. 
